# yarp-device-haptic-gloves

./: .gitignore  CMakeLists.txt  README.md
ManusGlove/: CMakeLists.txt  README.md
ManusGlove/conf/: ManusGlove.xml  ManusGloveLeft.xml  ManusGloveRight.xml
ManusGlove/conf/ManusGlove/: Left.xml  Right.xml
ManusGlove/include/: ManusGlove.h  ManusGloveHelper.h
ManusGlove/src/: ManusGlove.cpp  ManusGloveHelper.cpp
ManusGloves/: CMakeLists.txt  README.md
ManusGloves/conf/: ManusGloveRight.xml
ManusGloves/include/: ManusGlove.h  ManusGloveHelper.h
ManusGloves/src/: ManusGlove.cpp  ManusGloveHelper.cpp
SenseGlove/: CMakeLists.txt  README.md
SenseGlove/conf/: SenseGlove.xml
SenseGlove/conf/SenseGlove/: Left.xml  Right.xml
SenseGlove/include/: HapticGlove.h  SenseGloveHelper.hpp
SenseGlove/src/: HapticGlove.cpp  SenseGloveHelper.cpp
WeartGlove/: CMakeLists.txt  README.md
WeartGlove/conf/: WeArtGlove.xml  WeArtGloveLeft.xml  WeArtGloveRight.xml  WeartGlove.xml
WeartGlove/conf/WeartGlove/: Left.xml  Right.xml
WeartGlove/src/: WeArtGlove.cpp
WeartGloves/: CMakeLists.txt  README.md
WeartGloves/conf/: WeArtGlove.xml  WeArtGloveLeft.xml  WeArtGloveRight.xml
WeartGloves/include/: WeArtGlove.h
WeartGloves/models/: HumanHandModel.urdf
WeartGloves/src/: WeArtGlove.cpp
cmake/: FindManusSDK.cmake  FindSenseGloveSDK.cmake
